# ripgrep

./: .travis.yml  Cargo.toml
grep-cli/: Cargo.toml  README.md
grep-cli/src/: lib.rs
grep/examples/: simplegrep.rs
src/: args.rs  main.rs
